--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
+a:hover, #footer a:hover {
+  color: #784EE5;
+}
+
+#header {
+  background-color: #512888;
+  color: #D0B4F8;
+}
+
+#header .button.special {
+  color: #784EE5 !important;
+}
+
 header.major:after {
   border-bottom: none;
 }
