--- a/css/main.css
+++ b/css/main.css
@@ -2933,7 +2933,7 @@
 /* Wrapper */
 
 	.wrapper {
-		padding: 4.5em 0 2.5em 0 ;
+		padding: 4.5em 2.5em;
 		background-color: #ffffff;
 		border-bottom: solid 2px #eeeeee;
 	}
